# GeoCOCO

./: .gitignore  .readthedocs.yaml  404.html  README.md  environment.yml  full_environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml  test_release.yml
cli/: index.html
docs/: cli.md  conf.py  geococo.rst  index.md  index.rst  models.md  modules.rst  processing.md  quickstart.rst  tests.rst  utils.md
docs/source/: conf.py  index.rst  quickstart.rst
fiftyone/: index.html
geococo/: __init__.py  cli.py  coco_manager.py  coco_models.py  coco_processing.py  labels_to_coco.py  models.py  utils.py  window_schema.py
leafmap/: index.html
models/: index.html
processing/: index.html
search/: search_index.json
tests/: conftest.py  fixtures.py  test_coco_manager.py  test_coco_models.py  test_coco_processing.py  test_models.py  test_utils.py  test_window_schema.py
utils/: index.html
