[tool.poetry]
name = "geococo"
version = "0.5.6"
description = "Converts GIS annotations to Microsoft's Common Objects In Context (COCO) dataset format"
authors = ["Jasper Siebring <j.siebring92@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jaspersiebring/GeoCOCO"
homepage = "https://geococo.readthedocs.io/"
keywords = ["coco", "annotation", "deep-learning", "gis", "qgis", "arcgis", "labeling", "ai", "yolo"]
packages = [
    {include = "geococo"}
]

[tool.poetry.scripts]
geococo = "geococo.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.0"
rasterio = "^1.3.8"
numpy = "^2.0.0"
pycocotools = "^2.0.7"
pydantic = "^2.0"
opencv-python-headless = "^4.8.0.76"
typer = "^0.9.0"
semver = "^3.0.1"
tqdm = "^4.66.3"
pandera = {extras = ["geopandas"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
black = "^23.7.0"
ruff = "^0.5.0"
docformatter = {extras = ["tomli"], version = "^1.7.5"}
toml = "^0.10.2"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"
pandas-stubs = "^2.0.3.230814"
types-pycocotools = "^2.0.0.4"
types-tqdm = "^4.66.0.2"
types-python-dateutil = "^2.8.19.14"
types-toml = "^0.10.8.7"

[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "geopandas",
    "shapely.*"
]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
strict_optional = false
disable_error_code = 'no-redef'

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"geococo/__init__.py" = ["F401"]

[tool.docformatter]
black = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"